# polygons

./: .editorconfig  .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yml
.github/workflows/: ci.yml
backend/: .dockerignore  Dockerfile  README.md  alembic.ini  openapi.yaml  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_create_polygons.py
backend/scripts/: export_openapi.py
backend/src/polygons_api/: __init__.py  main.py  openapi_export.py
backend/src/polygons_api/api/: __init__.py  deps.py  errors.py
backend/src/polygons_api/api/routers/: __init__.py  health.py  polygons.py
backend/src/polygons_api/api/schemas/: __init__.py  error.py  health.py  polygon.py
backend/src/polygons_api/core/: __init__.py  config.py
backend/src/polygons_api/domain/: __init__.py  errors.py  models.py
backend/src/polygons_api/infra/: __init__.py  db.py  sleep.py
backend/src/polygons_api/repositories/: __init__.py  mappers.py  memory.py  protocols.py
backend/src/polygons_api/repositories/sqlalchemy/: __init__.py  models.py  polygon_repo.py
backend/src/polygons_api/services/: __init__.py  geometry.py  polygon_service.py
backend/tests/: conftest.py
backend/tests/integration/: test_openapi_snapshot.py  test_polygons_api.py
backend/tests/unit/: test_geometry.py  test_polygon_service.py
frontend/: .yarnrc.yml  eslint.config.js  index.html  package.json  tsconfig.app.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/api/: client.ts  schema.d.ts
frontend/src/components/: PolygonCanvas.tsx  PolygonCanvasDrawing.tsx  PolygonCanvasImageControls.tsx  PolygonCanvasStatus.tsx  PolygonDialog.tsx  PolygonItem.tsx  PolygonList.tsx  ToastItem.tsx  ToastList.tsx
frontend/src/hooks/: useAutoSaveRandom.ts  useBackgroundImage.ts  useCreatePolygon.ts  useDeletePolygon.ts  usePolygonCanvas.ts  usePolygons.ts  useRenamePolygon.ts  useTapToStart.ts  (+2 more)
frontend/tests/: canvasMath.test.ts  polygonCanvas.test.tsx  polygonList.test.tsx  randomPolygon.test.ts  setup.ts  utils.tsx
(+6 files in other folders)
